resolve all resume styling issues on mobile screens

--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,6 @@
 #section-4{
     background-color: var(--ocean);
+    padding-bottom: var(--fsTriple);
 }
 
 #section-4 #resume-container{
@@ -18,6 +19,26 @@
 #resume-heading .website{
     color: var(--white);
 }
+
+#download-btn{
+    text-decoration: none;
+    background-color: var(--turquoise);
+    border-radius: .5rem;
+    border: solid 1px var(--turquoise);
+    padding: .4rem;
+    box-shadow: 0 8px 8px var(--black);
+    letter-spacing: .1rem;
+    font-family: var(--ffInconsolata);
+    font-weight: var(--fw700);
+    color: var(--black);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 
 
